Fix leaderboard on Safari

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -42,7 +42,7 @@ main.content {
     padding-top: 4rem;
   }
 
-  .leaderboard {
+  .lb {
     position: fixed;
     top: 6rem;
     right: 0;
