--- a/frontend/src/Leaderboard/Leaderboard.css
+++ b/frontend/src/Leaderboard/Leaderboard.css
@@ -1,5 +1,5 @@
 @media screen and (max-width: 900px) {
-  .leaderboard {
+  .lb {
     padding: 0 1rem;
   }
 }
